--- a/parcial-final-n-capas-012025-master/src/main/resources/application.yml
+++ b/parcial-final-n-capas-012025-master/src/main/resources/application.yml
@@ -1,8 +1,8 @@
 spring:
   datasource:
-    url: ${SPRING_DATASOURCE_URL:jdbc:postgresql://localhost:5432/supportdb}
-    username: ${SPRING_DATASOURCE_USERNAME:postgres}
-    password: ${SPRING_DATASOURCE_PASSWORD:2002}
+    url: jdbc:postgresql://localhost:5432/supportdb
+    username: postgres
+    password: 2002
   jpa:
     hibernate:
       ddl-auto: update
